# contextkit

./: CMakeLists.txt  README  cmake_uninstall.cmake  configure.ac
common/: CMakeLists.txt
libcontextprovider/: CMakeLists.txt  Makefile.am  contextprovider-1.0.pc.in
libcontextprovider/context-provide/: Makefile.am
libcontextprovider/customer-tests/client/: Makefile.am
libcontextprovider/customer-tests/service/: Makefile.am
libcontextprovider/customer-tests/subscription/: Makefile.am
libcontextprovider/customer-tests/types/: Makefile.am
libcontextprovider/customer-tests/value-changes/: Makefile.am
libcontextprovider/src/: CMakeLists.txt  Makefile.am
libcontextprovider/unit-tests/contextc/: Makefile.am
libcontextprovider/unit-tests/contextgroup/: Makefile.am
libcontextprovider/unit-tests/property/: Makefile.am
libcontextprovider/unit-tests/service/: Makefile.am
libcontextprovider/unit-tests/servicebackend/: Makefile.am
libcontextsubscriber/: CMakeLists.txt  Makefile.am  contextsubscriber-1.0.pc.in
libcontextsubscriber/cli/: Makefile.am
libcontextsubscriber/cls/: Makefile.am
libcontextsubscriber/customer-tests/testplugins/timeplugin1/: Makefile.am
libcontextsubscriber/customer-tests/testplugins/timeplugin2/: Makefile.am
libcontextsubscriber/customer-tests/waitforsubs/: Makefile.am
libcontextsubscriber/src/: CMakeLists.txt  Makefile.am  contextpropertyinfo.cpp  contextpropertyinfo.h  contextregistryinfo.cpp  contextregistryinfo.h  infobackend.cpp  infobackend.h  infocdbbackend.cpp  subscriberinterface.cpp  subscriberinterface.h
libcontextsubscriber/unit-tests/assoctree/: Makefile.am
libcontextsubscriber/unit-tests/cdb/: Makefile.am
libcontextsubscriber/unit-tests/contextpropertyinfo/: Makefile.am
libcontextsubscriber/unit-tests/contextregistryinfo/: Makefile.am
libcontextsubscriber/unit-tests/contexttypeinfo/: Makefile.am
libcontextsubscriber/unit-tests/contexttyperegistryinfo/: Makefile.am
libcontextsubscriber/unit-tests/duration/: Makefile.am
libcontextsubscriber/unit-tests/handlesignalrouter/: Makefile.am
libcontextsubscriber/unit-tests/infobackend/: Makefile.am
libcontextsubscriber/unit-tests/infocdbbackend/: Makefile.am
libcontextsubscriber/unit-tests/infoxmlbackend/: Makefile.am
libcontextsubscriber/unit-tests/nanoxml/: Makefile.am
libcontextsubscriber/unit-tests/propertyhandle/: Makefile.am
libcontextsubscriber/unit-tests/provider/: Makefile.am
libcontextsubscriber/update-contextkit-providers/: CMakeLists.txt  Makefile.am  update-contextkit-providers.cpp
sandbox/multithreading-tests/new-property-in-thread/: Makefile.am
sandbox/multithreading-tests/single-thread/: Makefile.am
sandbox/multithreading-tests/using-backend-from-thread/: Makefile.am
spec/: CMakeLists.txt
