FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-fPIC)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${QT_INCLUDES}
    )

SET (LIBRARY common)

SET(LIBRARY_SRCS
    logging.cpp
    )

SET(LIBRARY_HEADERS
	logging.h 
	sconnect.h
    )

ADD_LIBRARY(${LIBRARY} ${LIBRARY_SRCS} ${LIBRARY_HEADERS})

   
TARGET_LINK_LIBRARIES(${LIBRARY}
    ${ZLIB_LIBRARIES}
    ${QT_LIBRARIES}
    )

#INSTALL(TARGETS ${LIBRARY} RUNTIME DESTINATION ${PKG_LIBDIR})

