FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/libcontextsubscriber/src
    ${QT_INCLUDES}
    )

SET (PROGRAMS update-contextkit-providers)

SET(PROGRAM_SRCS
    update-contextkit-providers.cpp
    )

SET(PROGRAM_HEADERS
    )

ADD_DEFINITIONS(-DDEFAULT_CONTEXT_PROVIDERS="${PKG_DATADIR}contextkit/providers/")
ADD_DEFINITIONS(-DCONTEXT_LOG_MODULE_NAME="update-contextkit-providers")

ADD_EXECUTABLE(${PROGRAMS} ${PROGRAM_SRCS} ${PROGRAM_HEADERS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS}
    ${ZLIB_LIBRARIES}
    ${QT_LIBRARIES}
    ${DBUS_LIBRARIES}
    contextsubscriber
    )

INSTALL(TARGETS ${PROGRAMS} RUNTIME DESTINATION ${PKG_BINDIR})

